<resources xmlns:tools="http://schemas.android.com/tools">
  <string name="app_name" translatable="false">نور الهدى</string>
  <string name="crowdin_comment_break_strings_7" translatable="false">Crowdin comment break</string>
  <string name="ok_button">OK</string>
  <string name="cancel_button">Cancel</string>
  <string name="email_address" translatable="false">mirfatif.dev@gmail.com</string>
  <string name="play_store_url" translatable="false">https://play.google.com/store/apps/details?id=com.mirfatif.noorulhuda</string>
  <string name="no_email_app_installed">No email app installed</string>
  <string name="no_browser_installed">No web browser app installed</string>
  <string name="no_maps_installed">No maps app installed</string>
  <string name="go">Go</string>
  <string name="please_wait">Please wait…</string>
  <string name="save">Save</string>
  <string name="required">REQUIRED</string>
  <string name="_default">Default</string>
  <string name="quranic">Quranic</string>
  <string name="masnoon">Masnoon</string>
  <string name="occasions">Occasions</string>
  <string name="country">Country</string>
  <string name="city_area">City / Area</string>
  <string name="min">%d min</string>
  <string name="yes">Yes</string>
  <string name="no">No</string>
  <string name="stop">Stop</string>
  <string name="tasmia" translatable="false">بِسْمِ اللَّهِ الرَّحْمَـٰنِ الرَّحِيم</string>
  <string name="surah_name" translatable="false">سورة %s</string>
  <string name="left_brace" translatable="false">\uFD62</string>
  <string name="right_brace" translatable="false">\uFD63</string>
  <string name="makki" translatable="false">مَكِّيَّةٌ</string>
  <string name="madni" translatable="false">مَدنِيَّةٌ</string>
  <string name="aayahs" translatable="false">اٰيَاتُهَا</string>
  <string name="rukus" translatable="false">رُكُوعُهَا</string>
  <string name="surah" translatable="false">سورة</string>
  <string name="juz" translatable="false">جُز</string>
  <string name="manzil" translatable="false">منزِل</string>
  <string name="page" translatable="false">صفحة</string>
  <string name="crowdin_comment_break_strings_8" translatable="false">Crowdin comment break</string>
  <string name="font_hafs" translatable="false">حفص</string>
  <string name="font_warsh" translatable="false">ورش</string>
  <string name="font_saleem" translatable="false">سليم</string>
  <string name="font_scheherazade" translatable="false">شهرزاد</string>
  <string name="font_noor_e_huda" translatable="false">نور هدى</string>
  <string name="font_me_quran" translatable="false">القرآن</string>
  <string name="font_kitab" translatable="false">کتاب</string>
  <string name="crowdin_comment_break_strings_9" translatable="false">Crowdin comment break</string>
  <string name="font_file_warsh" translatable="false" tools:ignore="Typos">uthmanic_warsh1_ver09</string>
  <string name="font_file_saleem" translatable="false">saleem</string>
  <string name="font_file_scheherazade" translatable="false">scheherazade_new_regular</string>
  <string name="font_file_noor_e_huda" translatable="false">noorehuda</string>
  <string name="font_file_me_quran" translatable="false">me_quran</string>
  <string name="font_file_kitab" translatable="false">kitab_regular</string>
  <string name="font_file_nastaleeq" translatable="false">jameel_noori_nastaleeq</string>
  <string name="crowdin_comment_break_strings_10" translatable="false">Crowdin comment break</string>
  <string name="nothing_to_show">Nothing to show</string>
  <string name="long_press_to_bookmark">Long press on an Āyah to bookmark it</string>
  <string name="long_press_to_tag">Long press on an Āyah to tag it</string>
  <string name="press_plus_create_tag">Tap on + to create tag</string>
  <plurals name="aayah_count">
    <item quantity="one">%d Āyah</item>
    <item quantity="other">%d Āyahs</item>
  </plurals>
  <plurals name="surah_count">
    <item quantity="one">%1$s from %2$d Surah</item>
    <item quantity="other">%1$s from %2$d Surahs</item>
  </plurals>
  <string name="create_tag">Create Tag</string>
  <string name="copy">Copy</string>
  <string name="share">Share</string>
  <string name="bookmark">Bookmark</string>
  <string name="tag">Tag</string>
  <string name="translation">Translation</string>
  <string name="copied">Copied</string>
  <string name="bookmarked">Bookmarked</string>
  <string name="remove_filter">Remove Filter</string>
  <string name="no_matches">No matches</string>
  <string name="texts">Mushaf Text</string>
  <string name="translations">Translations</string>
  <string name="download_db_file">Download database file?</string>
  <string name="download_font_file">Download font file?</string>
  <string name="download_audio_file">Download audio file?</string>
  <string name="downloading_db">Downloading Database</string>
  <string name="downloading_font">Downloading Font</string>
  <string name="downloading_adhan">Downloading Adhan</string>
  <string name="no_internet">No internet connection</string>
  <string name="download_failed">Download failed</string>
  <string name="extraction_failed">Extraction failed</string>
  <string name="results">%d results</string>
  <string name="creating_database">Creating Database</string>
  <string name="failed_to_build_database">Failed to build database</string>
  <string name="crash_report">Crash Report</string>
  <string name="ask_to_report_crash_small">Send crash report to the developer</string>
  <string name="ask_to_report_crash">Sorry, a component of the app had a problem and crashed. Send the log file to the developer through email or Telegram so that the bug can be fixed.</string>
  <string name="send_report">Send Report</string>
  <string name="title">Title</string>
  <string name="description">Description</string>
  <string name="double_click_to_edit">Double tap to edit</string>
  <string name="search_help"><![CDATA[Use <b>&amp;</b> (AND), <b>|</b> (OR) and <b>!</b> (NOT) operators for complex search.<br/>Following characters can be used in plain Arabic search or with vowels (diacritics). Tap to copy. Or to type them yourself, you can use <i>Urdu for AnySoftKeyboard</i><a href="https://play.google.com/store/apps/details?id=com.anysoftkeyboard.languagepack.mirfatif.urdu">LINK</a>.]]></string>
  <string name="crowdin_comment_break_strings_1" translatable="false">Crowdin comment break</string>
  <string name="menu">Menu</string>
  <string name="theme_menu_item">Theme</string>
  <string name="dark_theme_menu_item">Dark Mode</string>
  <string name="page_view_menu_item">Page Mode</string>
  <string name="page_slide_menu_item">Page Slide</string>
  <string name="aayah_breaks_menu_item">Āyah Breaks</string>
  <string name="info_header_menu_item">Page Header</string>
  <string name="theme_color_green">Green</string>
  <string name="theme_color_blue">Blue</string>
  <string name="theme_color_red">Red</string>
  <string name="theme_color_gray">Gray</string>
  <string name="brightness_menu_item">Brightness</string>
  <string name="bg_color_menu_item">Background</string>
  <string name="text_color_menu_item">Font Color</string>
  <string name="font_size_menu_item">Font Size</string>
  <string name="font_menu_item">Font</string>
  <string name="backup_restore_menu_item">Backup / Restore</string>
  <string name="bookmarks_menu_item">Bookmarks</string>
  <string name="tags_menu_item">Tags</string>
  <string name="texts_menu_item">Texts</string>
  <string name="translations_menu_item">Translations</string>
  <string name="select_trans_menu_item">Select Language</string>
  <string name="trans_with_text_menu_item">Show Under Text</string>
  <string name="prayer_time_menu_item">Prayer Time</string>
  <string name="supplications_menu_item">Dua</string>
  <string name="search_settings_menu_item">Search Settings</string>
  <string name="search_settings_in_trans">Search in translation</string>
  <string name="search_settings_with_vowels">Search with vowels</string>
  <string name="search_help_menu_item">Help</string>
  <string name="search_menu_item">Search</string>
  <string name="goto_menu_item">Go To</string>
  <string name="about_menu_item">About</string>
  <string name="crowdin_comment_break_strings_11" translatable="false">Crowdin comment break</string>
  <string name="channel_app_update">App Updates</string>
  <string name="channel_crash_report">Crash Report</string>
  <string name="channel_logcat_collection">Log Collection</string>
  <string name="channel_prayer_widget">Prayer Widget</string>
  <string name="channel_prayer_time">Prayer Time</string>
  <string name="channel_prayer_adhan">Prayer Adhan</string>
  <string name="prayer_notification_group" translatable="false">prayer_notification_group</string>
  <string name="setting_alarms">Setting Alarms</string>
  <string name="crowdin_comment_break_strings_2" translatable="false">Crowdin comment break</string>
  <string name="logging">Logging</string>
  <string name="logging_msg">Logging will be auto-stopped after 5 minutes.</string>
  <string name="logging_failed">Logging failed</string>
  <string name="crowdin_comment_break_strings_3" translatable="false">Crowdin comment break</string>
  <string name="email">Email</string>
  <string name="telegram_group">Telegram Group</string>
  <string name="telegram_link" translatable="false">https://t.me/NoorUlHudaApp</string>
  <string name="source">Source</string>
  <string name="source_url" translatable="false">https://github.com/mirfatif/NoorUlHuda</string>
  <string name="report_issues">Report Issues</string>
  <string name="report_issues_summary">Bugs, improvements, suggestions…</string>
  <string name="issues_url" translatable="false">https://github.com/mirfatif/NoorUlHuda/issues</string>
  <string name="app_rating">Rate Me</string>
  <string name="app_rating_summary">Rating / review on Play Store</string>
  <string name="privacy_policy">Privacy Policy</string>
  <string name="privacy_policy_link" translatable="false">https://mirfatif.github.io/NoorUlHuda/privacy_policy.html</string>
  <string name="translations_summary">Want to see the app in your language?</string>
  <string name="translation_link">https://crowdin.com/project/nuh</string>
  <string name="language_credits"><![CDATA[<ul><li><a href="">Add my language</a></li></ul>]]></string>
  <string name="share_summary">Share the app with others</string>
  <string name="share_text">Check out this amazing app! %s</string>
  <string name="update">Update</string>
  <string name="update_summary">Check for app updates</string>
  <string name="check_in_progress">Check in progress</string>
  <string name="check_for_updates_failed">Check for updates failed</string>
  <string name="app_is_up_to_date">App is up-to-date</string>
  <string name="new_version_available">New app version is available</string>
  <string name="tap_to_download">Tap to download</string>
  <string name="download">Download</string>
  <string name="auto_update">Update Check</string>
  <string name="third_party_res">Third Party Resources</string>
  <string name="third_party_res_summary">Credits and Disclaimer</string>
  <string name="collect_logs">Collect Logs</string>
  <string name="collect_logs_summary">Save log to file</string>
  <string name="widget">Widget</string>
  <string name="show_widget_notification">Show Notification Widget</string>
  <string name="home_widget_style">Home Widget Style</string>
</resources>