<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
  <group android:checkableBehavior="single">
    <item
      android:id="@+id/action_font_hafs"
      android:title="@string/font_hafs" />
    <item
      android:id="@+id/action_font_warsh"
      android:title="@string/font_warsh" />
    <item
      android:id="@+id/action_font_saleem"
      android:title="@string/font_saleem" />
    <item
      android:id="@+id/action_font_sch"
      android:title="@string/font_scheherazade" />
    <item
      android:id="@+id/action_font_noor"
      android:title="@string/font_noor_e_huda" />
    <item
      android:id="@+id/action_font_me"
      android:title="@string/font_me_quran" />
    <item
      android:id="@+id/action_font_kitab"
      android:title="@string/font_kitab" />
  </group>
</menu>
