<?xml version="1.0" encoding="utf-8"?>
<com.mirfatif.noorulhuda.ui.base.MyLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical">

  <View
    android:layout_width="match_parent"
    android:layout_height="1dp"
    android:background="?attr/accent" />

  <androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="8dp"
    android:scrollbars="vertical">

    <com.mirfatif.noorulhuda.ui.base.MyLinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:layout_marginStart="8dp"
      android:layout_marginEnd="8dp"
      android:orientation="vertical">

      <ImageView
        android:id="@+id/icon"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:src="?attr/app_icon"
        tools:ignore="ContentDescription" />

      <TextView
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/uthmanic_hafs1_ver17"
        android:text="@string/app_name"
        android:textSize="18sp" />

      <TextView
        android:id="@+id/version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="8dp"
        android:layout_gravity="center_horizontal" />

      <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?attr/accent" />

      <com.mirfatif.noorulhuda.ui.base.MyLinearLayout
        android:id="@+id/third_party_res"
        style="@style/AboutActivityItemContainer">

        <ImageView
          style="@style/AboutActivityIconImg"
          android:src="@drawable/tnc"
          tools:ignore="ContentDescription" />

        <com.mirfatif.noorulhuda.ui.base.MyLinearLayout style="@style/AboutActivityItemTextBox">

          <TextView
            style="@style/AboutActivityItemTitle"
            android:text="@string/third_party_res" />

          <TextView
            style="@style/AboutActivityItemSummary"
            android:text="@string/third_party_res_summary" />

        </com.mirfatif.noorulhuda.ui.base.MyLinearLayout>

      </com.mirfatif.noorulhuda.ui.base.MyLinearLayout>

      <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?attr/accent" />

      <com.mirfatif.noorulhuda.ui.base.MyLinearLayout
        android:id="@+id/contact"
        style="@style/AboutActivityItemContainer">

        <ImageView
          style="@style/AboutActivityIconImg"
          android:src="@drawable/email"
          tools:ignore="ContentDescription" />

        <com.mirfatif.noorulhuda.ui.base.MyLinearLayout style="@style/AboutActivityItemTextBox">

          <TextView
            style="@style/AboutActivityItemTitle"
            android:text="@string/email" />

          <TextView
            style="@style/AboutActivityItemSummary"
            android:text="@string/email_address" />

        </com.mirfatif.noorulhuda.ui.base.MyLinearLayout>

      </com.mirfatif.noorulhuda.ui.base.MyLinearLayout>

      <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?attr/accent" />

      <com.mirfatif.noorulhuda.ui.base.MyLinearLayout
        android:id="@+id/telegram"
        style="@style/AboutActivityItemContainer">

        <ImageView
          style="@style/AboutActivityIconImg"
          android:src="@drawable/telegram"
          tools:ignore="ContentDescription" />

        <com.mirfatif.noorulhuda.ui.base.MyLinearLayout style="@style/AboutActivityItemTextBox">

          <TextView
            style="@style/AboutActivityItemTitle"
            android:text="@string/telegram_group" />

          <TextView
            style="@style/AboutActivityItemSummary"
            android:text="@string/telegram_link" />

        </com.mirfatif.noorulhuda.ui.base.MyLinearLayout>
      </com.mirfatif.noorulhuda.ui.base.MyLinearLayout>

      <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?attr/accent" />

      <com.mirfatif.noorulhuda.ui.base.MyLinearLayout
        android:id="@+id/source_code"
        style="@style/AboutActivityItemContainer">

        <ImageView
          style="@style/AboutActivityIconImg"
          android:src="@drawable/github_mark"
          tools:ignore="ContentDescription" />

        <com.mirfatif.noorulhuda.ui.base.MyLinearLayout style="@style/AboutActivityItemTextBox">

          <TextView
            style="@style/AboutActivityItemTitle"
            android:text="@string/source" />

          <TextView
            style="@style/AboutActivityItemSummary"
            android:text="@string/source_url" />

        </com.mirfatif.noorulhuda.ui.base.MyLinearLayout>
      </com.mirfatif.noorulhuda.ui.base.MyLinearLayout>

      <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?attr/accent" />

      <com.mirfatif.noorulhuda.ui.base.MyLinearLayout
        android:id="@+id/issues"
        style="@style/AboutActivityItemContainer">

        <ImageView
          style="@style/AboutActivityIconImg"
          android:src="@drawable/issues"
          tools:ignore="ContentDescription" />

        <com.mirfatif.noorulhuda.ui.base.MyLinearLayout style="@style/AboutActivityItemTextBox">

          <TextView
            style="@style/AboutActivityItemTitle"
            android:text="@string/report_issues" />

          <TextView
            style="@style/AboutActivityItemSummary"
            android:text="@string/report_issues_summary" />

        </com.mirfatif.noorulhuda.ui.base.MyLinearLayout>
      </com.mirfatif.noorulhuda.ui.base.MyLinearLayout>

      <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?attr/accent" />

      <com.mirfatif.noorulhuda.ui.base.MyLinearLayout
        android:id="@+id/logging"
        style="@style/AboutActivityItemContainer">

        <ImageView
          style="@style/AboutActivityIconImg"
          android:src="@drawable/log"
          tools:ignore="ContentDescription" />

        <com.mirfatif.noorulhuda.ui.base.MyLinearLayout style="@style/AboutActivityItemTextBox">

          <TextView
            android:id="@+id/logging_title"
            style="@style/AboutActivityItemTitle"
            android:text="@string/collect_logs" />

          <TextView
            style="@style/AboutActivityItemSummary"
            android:text="@string/collect_logs_summary" />

        </com.mirfatif.noorulhuda.ui.base.MyLinearLayout>
      </com.mirfatif.noorulhuda.ui.base.MyLinearLayout>

      <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?attr/accent" />

      <com.mirfatif.noorulhuda.ui.base.MyLinearLayout
        android:id="@+id/rating"
        style="@style/AboutActivityItemContainer">

        <ImageView
          style="@style/AboutActivityIconImg"
          android:src="@drawable/star"
          tools:ignore="ContentDescription" />

        <com.mirfatif.noorulhuda.ui.base.MyLinearLayout style="@style/AboutActivityItemTextBox">

          <TextView
            style="@style/AboutActivityItemTitle"
            android:text="@string/app_rating" />

          <TextView
            style="@style/AboutActivityItemSummary"
            android:text="@string/app_rating_summary" />

        </com.mirfatif.noorulhuda.ui.base.MyLinearLayout>
      </com.mirfatif.noorulhuda.ui.base.MyLinearLayout>

      <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?attr/accent" />

      <com.mirfatif.noorulhuda.ui.base.MyLinearLayout
        android:id="@+id/privacy_policy"
        style="@style/AboutActivityItemContainer">

        <ImageView
          style="@style/AboutActivityIconImg"
          android:src="@drawable/privacy_policy"
          tools:ignore="ContentDescription" />

        <com.mirfatif.noorulhuda.ui.base.MyLinearLayout style="@style/AboutActivityItemTextBox">

          <TextView
            style="@style/AboutActivityItemTitle"
            android:text="@string/privacy_policy" />

          <TextView
            style="@style/AboutActivityItemSummary"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/privacy_policy_link" />

        </com.mirfatif.noorulhuda.ui.base.MyLinearLayout>
      </com.mirfatif.noorulhuda.ui.base.MyLinearLayout>

      <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?attr/accent" />

      <com.mirfatif.noorulhuda.ui.base.MyLinearLayout
        android:id="@+id/translate"
        style="@style/AboutActivityItemContainer">

        <ImageView
          style="@style/AboutActivityIconImg"
          android:src="@drawable/language"
          tools:ignore="ContentDescription" />

        <com.mirfatif.noorulhuda.ui.base.MyLinearLayout style="@style/AboutActivityItemTextBox">

          <TextView
            style="@style/AboutActivityItemTitle"
            android:text="@string/translations" />

          <TextView
            style="@style/AboutActivityItemSummary"
            android:text="@string/translations_summary" />

        </com.mirfatif.noorulhuda.ui.base.MyLinearLayout>
      </com.mirfatif.noorulhuda.ui.base.MyLinearLayout>

      <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?attr/accent" />

      <com.mirfatif.noorulhuda.ui.base.MyLinearLayout
        android:id="@+id/share_app"
        style="@style/AboutActivityItemContainer">

        <ImageView
          style="@style/AboutActivityIconImg"
          android:src="@drawable/share"
          tools:ignore="ContentDescription" />

        <com.mirfatif.noorulhuda.ui.base.MyLinearLayout style="@style/AboutActivityItemTextBox">

          <TextView
            style="@style/AboutActivityItemTitle"
            android:text="@string/share" />

          <TextView
            style="@style/AboutActivityItemSummary"
            android:text="@string/share_summary" />

        </com.mirfatif.noorulhuda.ui.base.MyLinearLayout>
      </com.mirfatif.noorulhuda.ui.base.MyLinearLayout>

      <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?attr/accent" />

      <com.mirfatif.noorulhuda.ui.base.MyLinearLayout
        android:id="@+id/check_update"
        style="@style/AboutActivityItemContainer">

        <ImageView
          style="@style/AboutActivityIconImg"
          android:src="@drawable/update"
          tools:ignore="ContentDescription" />

        <com.mirfatif.noorulhuda.ui.base.MyLinearLayout style="@style/AboutActivityItemTextBox">

          <TextView
            style="@style/AboutActivityItemTitle"
            android:text="@string/update" />

          <TextView
            android:id="@+id/check_update_summary"
            style="@style/AboutActivityItemSummary"
            android:text="@string/update_summary" />

        </com.mirfatif.noorulhuda.ui.base.MyLinearLayout>
      </com.mirfatif.noorulhuda.ui.base.MyLinearLayout>

      <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?attr/accent" />

    </com.mirfatif.noorulhuda.ui.base.MyLinearLayout>
  </androidx.core.widget.NestedScrollView>
</com.mirfatif.noorulhuda.ui.base.MyLinearLayout>
