<?xml version="1.0" encoding="utf-8"?>
<com.mirfatif.noorulhuda.ui.base.MyLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:padding="8dp"
  android:background="@drawable/context_menu_bg"
  android:gravity="center">

  <ImageView
    android:id="@+id/copy_button"
    android:layout_width="32dp"
    android:layout_height="32dp"
    android:padding="2dp"
    android:background="?android:attr/selectableItemBackgroundBorderless"
    android:contentDescription="@string/copy"
    android:src="@drawable/copy" />

  <ImageView
    android:id="@+id/share_button"
    android:layout_width="32dp"
    android:layout_height="32dp"
    android:layout_marginStart="4dp"
    android:padding="2dp"
    android:background="?android:attr/selectableItemBackgroundBorderless"
    android:contentDescription="@string/share"
    android:src="@drawable/share" />

  <ImageView
    android:id="@+id/bookmark_button"
    android:layout_width="32dp"
    android:layout_height="32dp"
    android:layout_marginStart="4dp"
    android:padding="2dp"
    android:background="?android:attr/selectableItemBackgroundBorderless"
    android:contentDescription="@string/bookmark"
    android:src="@drawable/bookmark"
    android:visibility="gone" />

  <ImageView
    android:id="@+id/add_tag_button"
    android:layout_width="32dp"
    android:layout_height="32dp"
    android:layout_marginStart="4dp"
    android:padding="2dp"
    android:background="?android:attr/selectableItemBackgroundBorderless"
    android:contentDescription="@string/tag"
    android:src="@drawable/tag" />

  <ImageView
    android:id="@+id/goto_button"
    android:layout_width="32dp"
    android:layout_height="32dp"
    android:layout_marginStart="4dp"
    android:padding="2dp"
    android:background="?android:attr/selectableItemBackgroundBorderless"
    android:contentDescription="@string/goto_menu_item"
    android:src="@drawable/go_to"
    android:visibility="gone" />

  <ImageView
    android:id="@+id/trans_button"
    android:layout_width="32dp"
    android:layout_height="32dp"
    android:layout_marginStart="4dp"
    android:padding="2dp"
    android:background="?android:attr/selectableItemBackgroundBorderless"
    android:contentDescription="@string/translation"
    android:src="@drawable/translation"
    android:visibility="gone" />

</com.mirfatif.noorulhuda.ui.base.MyLinearLayout>
