<?xml version="1.0" encoding="utf-8"?>
<com.mirfatif.noorulhuda.ui.base.MyLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:layout_margin="8dp"
  android:orientation="vertical">

  <TextView
    android:textStyle="bold"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:minHeight="28dp"
    android:text="@string/widget"
    android:textColor="?attr/accent"
    android:textSize="14sp" />

  <com.mirfatif.noorulhuda.ui.base.MyLinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="12dp"
    android:orientation="horizontal">

    <TextView
      android:textStyle="bold"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:layout_gravity="center_vertical"
      android:text="@string/show_widget_notification"
      android:textColor="?attr/accent"
      android:textSize="14sp" />

    <CheckBox
      android:id="@+id/widget_notif_v"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:button="@drawable/check_with_line" />

  </com.mirfatif.noorulhuda.ui.base.MyLinearLayout>

  <com.mirfatif.noorulhuda.ui.base.MyLinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
      android:textStyle="bold"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="4dp"
      android:text="@string/home_widget_style"
      android:textColor="?attr/accent"
      android:textSize="14sp" />

    <Spinner
      android:id="@+id/style_picker"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1" />

  </com.mirfatif.noorulhuda.ui.base.MyLinearLayout>

</com.mirfatif.noorulhuda.ui.base.MyLinearLayout>
